--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,8 @@
   "license": "MIT",
   "proxy": "http://localhost:4000",
   "dependencies": {
+    "date-fns": "^3.6.0",
+    "date-fns-tz": "^3.1.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
