--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "moment": "^2.30.1",
     "mongodb": "^6.5.0",
     "morgan": "^1.10.0",
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "uuid": "^9.0.1"
   }
 }
